fixed buzzing noises

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>Transcriptron - Transcription</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src="https://cdn.webrtc-experiment.com/MediaStreamRecorder.js"></script>
+    <!-- <script src="https://cdn.webrtc-experiment.com/MediaStreamRecorder.js"></script> -->
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
+    <script src="download.min.js"></script>
+    <script src="WavAudioEncoder.min.js"></script>
     <script src='main.js'></script>
 </head>
 <body>
-    <canvas height="200" id="waveform"></canvas>
+    <canvas id="waveform"></canvas>
     <button disabled class="controls" id="start">Start</button>
     <button disabled class="controls" id="stop">Stop</button>
     <button disabled class="controls" id="save">Download a Copy</button>
