--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"></script>
     <script src="download.min.js"></script>
     <script src="WavAudioEncoder.min.js"></script>
+    <script src="buffercopy-node.js"></script>
     <script src='main.js'></script>
 </head>
 <body>
