bugfix: handle case when input skip is 0

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>
             skip_samples controls how many samples to skip for every sample when drawing.
             May also affect movement speed.
-            Must be a power of 2.
+            <strong>Must be a power of 2.</strong>
         </p>
         <p>
             audioBuffer_size controls how many samples to buffer before drawing.
